// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PropertyFields /> > renders correctly > boolean 1`] = `
<div>
  <p>
    <label
      class="_label_8bc908"
    >
      Name:
      <input
        class="_input_8bc908"
        name="property[0].name"
        required=""
      />
    </label>
  </p>
  <p>
    <label
      class="_label_8bc908"
    >
      Type:
      <select
        class="_input_8bc908"
        name="property[0].type"
      >
        <option
          value="string"
        >
          string
        </option>
        <option
          value="integer"
        >
          integer
        </option>
        <option
          value="number"
        >
          number
        </option>
        <option
          value="boolean"
        >
          boolean
        </option>
        <option
          value="reference"
        >
          reference
        </option>
      </select>
    </label>
  </p>
  <p>
    <label
      class="_array_8bc908"
    >
      <input
        name="property[0].array"
        type="checkbox"
        value="array"
      />
      is an array of such values
    </label>
  </p>
</div>
`;

exports[`<PropertyFields /> > renders correctly > integer 1`] = `
<div>
  <p>
    <label
      class="_label_8bc908"
    >
      Name:
      <input
        class="_input_8bc908"
        name="property[0].name"
        required=""
      />
    </label>
  </p>
  <p>
    <label
      class="_label_8bc908"
    >
      Type:
      <select
        class="_input_8bc908"
        name="property[0].type"
      >
        <option
          value="string"
        >
          string
        </option>
        <option
          value="integer"
        >
          integer
        </option>
        <option
          value="number"
        >
          number
        </option>
        <option
          value="boolean"
        >
          boolean
        </option>
        <option
          value="reference"
        >
          reference
        </option>
      </select>
    </label>
  </p>
  <div
    class="_group_8bc908"
  >
    <p>
      <label
        class="_label_8bc908"
      >
        Minimum value (optional):
        <input
          class="_input_8bc908"
          name="property[0].minimum"
          type="number"
        />
      </label>
    </p>
    <p>
      <label
        class="_label_8bc908"
      >
        Maximum value (optional):
        <input
          class="_input_8bc908"
          name="property[0].maximum"
          type="number"
        />
      </label>
    </p>
  </div>
  <p>
    <label
      class="_label_8bc908"
    >
      Comma-separated list of allowed values, no spaces (optional):
      <input
        class="_input_8bc908"
        name="property[0].enum"
        pattern="[^,](,.+)*"
      />
    </label>
  </p>
  <p>
    <label
      class="_array_8bc908"
    >
      <input
        name="property[0].array"
        type="checkbox"
        value="array"
      />
      is an array of such values
    </label>
  </p>
</div>
`;

exports[`<PropertyFields /> > renders correctly > integer array 1`] = `
<div>
  <p>
    <label
      class="_label_8bc908"
    >
      Name:
      <input
        class="_input_8bc908"
        name="property[0].name"
        required=""
      />
    </label>
  </p>
  <p>
    <label
      class="_label_8bc908"
    >
      Type:
      <select
        class="_input_8bc908"
        name="property[0].type"
      >
        <option
          value="string"
        >
          string
        </option>
        <option
          value="integer"
        >
          integer
        </option>
        <option
          value="number"
        >
          number
        </option>
        <option
          value="boolean"
        >
          boolean
        </option>
        <option
          value="reference"
        >
          reference
        </option>
      </select>
    </label>
  </p>
  <div
    class="_group_8bc908"
  >
    <p>
      <label
        class="_label_8bc908"
      >
        Minimum value (optional):
        <input
          class="_input_8bc908"
          name="property[0].minimum"
          type="number"
        />
      </label>
    </p>
    <p>
      <label
        class="_label_8bc908"
      >
        Maximum value (optional):
        <input
          class="_input_8bc908"
          name="property[0].maximum"
          type="number"
        />
      </label>
    </p>
  </div>
  <p>
    <label
      class="_label_8bc908"
    >
      Comma-separated list of allowed values, no spaces (optional):
      <input
        class="_input_8bc908"
        name="property[0].enum"
        pattern="[^,](,.+)*"
      />
    </label>
  </p>
  <p>
    <label
      class="_array_8bc908"
    >
      <input
        name="property[0].array"
        type="checkbox"
        value="array"
      />
      is an array of such values
    </label>
  </p>
  <div
    class="_group_8bc908"
  >
    <p>
      <label
        class="_label_8bc908"
      >
        Minimum of items (optional):
        <input
          class="_input_8bc908"
          min="0"
          name="property[0].minItems"
          step="1"
          type="number"
        />
      </label>
    </p>
    <p>
      <label
        class="_label_8bc908"
      >
        Maximum of items (optional):
        <input
          class="_input_8bc908"
          min="0"
          name="property[0].maxItems"
          step="1"
          type="number"
        />
      </label>
    </p>
  </div>
</div>
`;

exports[`<PropertyFields /> > renders correctly > number 1`] = `
<div>
  <p>
    <label
      class="_label_8bc908"
    >
      Name:
      <input
        class="_input_8bc908"
        name="property[0].name"
        required=""
      />
    </label>
  </p>
  <p>
    <label
      class="_label_8bc908"
    >
      Type:
      <select
        class="_input_8bc908"
        name="property[0].type"
      >
        <option
          value="string"
        >
          string
        </option>
        <option
          value="integer"
        >
          integer
        </option>
        <option
          value="number"
        >
          number
        </option>
        <option
          value="boolean"
        >
          boolean
        </option>
        <option
          value="reference"
        >
          reference
        </option>
      </select>
    </label>
  </p>
  <div
    class="_group_8bc908"
  >
    <p>
      <label
        class="_label_8bc908"
      >
        Minimum value (optional):
        <input
          class="_input_8bc908"
          name="property[0].minimum"
          type="number"
        />
      </label>
    </p>
    <p>
      <label
        class="_label_8bc908"
      >
        Maximum value (optional):
        <input
          class="_input_8bc908"
          name="property[0].maximum"
          type="number"
        />
      </label>
    </p>
  </div>
  <p>
    <label
      class="_label_8bc908"
    >
      Comma-separated list of allowed values, no spaces (optional):
      <input
        class="_input_8bc908"
        name="property[0].enum"
        pattern="[^,](,.+)*"
      />
    </label>
  </p>
  <p>
    <label
      class="_array_8bc908"
    >
      <input
        name="property[0].array"
        type="checkbox"
        value="array"
      />
      is an array of such values
    </label>
  </p>
</div>
`;

exports[`<PropertyFields /> > renders correctly > reference 1`] = `
<div>
  <p>
    <label
      class="_label_8bc908"
    >
      Name:
      <input
        class="_input_8bc908"
        name="property[0].name"
        required=""
      />
    </label>
  </p>
  <p>
    <label
      class="_label_8bc908"
    >
      Type:
      <select
        class="_input_8bc908"
        name="property[0].type"
      >
        <option
          value="string"
        >
          string
        </option>
        <option
          value="integer"
        >
          integer
        </option>
        <option
          value="number"
        >
          number
        </option>
        <option
          value="boolean"
        >
          boolean
        </option>
        <option
          value="reference"
        >
          reference
        </option>
      </select>
    </label>
  </p>
  <p>
    <label
      class="_label_8bc908"
    >
      $id of Referenced Claim Type:
      <input
        class="_input_8bc908"
        name="property[0].$ref"
        pattern="kilt:ctype:0x[0-9a-f]+"
        placeholder="kilt:ctype:0x…"
        required=""
      />
    </label>
  </p>
  <p>
    <label
      class="_array_8bc908"
    >
      <input
        name="property[0].array"
        type="checkbox"
        value="array"
      />
      is an array of such values
    </label>
  </p>
</div>
`;

exports[`<PropertyFields /> > renders correctly > string 1`] = `
<div>
  <p>
    <label
      class="_label_8bc908"
    >
      Name:
      <input
        class="_input_8bc908"
        name="property[0].name"
        required=""
      />
    </label>
  </p>
  <p>
    <label
      class="_label_8bc908"
    >
      Type:
      <select
        class="_input_8bc908"
        name="property[0].type"
      >
        <option
          value="string"
        >
          string
        </option>
        <option
          value="integer"
        >
          integer
        </option>
        <option
          value="number"
        >
          number
        </option>
        <option
          value="boolean"
        >
          boolean
        </option>
        <option
          value="reference"
        >
          reference
        </option>
      </select>
    </label>
  </p>
  <div
    class="_group_8bc908"
  >
    <p>
      <label
        class="_label_8bc908"
      >
        Minimum length (optional):
        <input
          class="_input_8bc908"
          min="0"
          name="property[0].minLength"
          step="1"
          type="number"
        />
      </label>
    </p>
    <p>
      <label
        class="_label_8bc908"
      >
        Maximum length (optional):
        <input
          class="_input_8bc908"
          min="0"
          name="property[0].maxLength"
          step="1"
          type="number"
        />
      </label>
    </p>
  </div>
  <p>
    <label
      class="_label_8bc908"
    >
      Format (optional):
      <select
        class="_input_8bc908"
        name="property[0].format"
      >
        <option
          value=""
        >
          unset
        </option>
        <option
          value="date"
        >
          date
        </option>
        <option
          value="time"
        >
          time
        </option>
        <option
          value="uri"
        >
          URI
        </option>
      </select>
    </label>
  </p>
  <p>
    <label
      class="_label_8bc908"
    >
      Comma-separated list of allowed values, no spaces (optional):
      <input
        class="_input_8bc908"
        name="property[0].enum"
        pattern="[^,](,.+)*"
      />
    </label>
  </p>
  <p>
    <label
      class="_array_8bc908"
    >
      <input
        name="property[0].array"
        type="checkbox"
        value="array"
      />
      is an array of such values
    </label>
  </p>
</div>
`;
